/*
 *                    GNU LESSER GENERAL PUBLIC LICENSE
 *                        Version 3, 29 June 2007
 *
 *  Copyright (C) 2007 Free Software Foundation, Inc. <http://fsf.org/>
 *  Everyone is permitted to copy and distribute verbatim copies
 *  of this license document, but changing it is not allowed.
 *
 *
 *   This version of the GNU Lesser General Public License incorporates
 * the terms and conditions of version 3 of the GNU General Public
 * License, supplemented by the additional permissions listed below.
 *
 *   0. Additional Definitions.
 *
 *   As used herein, "this License" refers to version 3 of the GNU Lesser
 * General Public License, and the "GNU GPL" refers to version 3 of the GNU
 * General Public License.
 *
 *   "The Library" refers to a covered work governed by this License,
 * other than an Application or a Combined Work as defined below.
 *
 *   An "Application" is any work that makes use of an interface provided
 * by the Library, but which is not otherwise based on the Library.
 * Defining a subclass of a class defined by the Library is deemed a mode
 * of using an interface provided by the Library.
 *
 *   A "Combined Work" is a work produced by combining or linking an
 * Application with the Library.  The particular version of the Library
 * with which the Combined Work was made is also called the "Linked
 * Version".
 *
 *   The "Minimal Corresponding Source" for a Combined Work means the
 * Corresponding Source for the Combined Work, excluding any source code
 * for portions of the Combined Work that, considered in isolation, are
 * based on the Application, and not on the Linked Version.
 *
 *   The "Corresponding Application Code" for a Combined Work means the
 * object code and/or source code for the Application, including any data
 * and utility programs needed for reproducing the Combined Work from the
 * Application, but excluding the System Libraries of the Combined Work.
 *
 *   1. Exception to Section 3 of the GNU GPL.
 *
 *   You may convey a covered work under sections 3 and 4 of this License
 * without being bound by section 3 of the GNU GPL.
 *
 *   2. Conveying Modified Versions.
 *
 *   If you modify a copy of the Library, and, in your modifications, a
 * facility refers to a function or data to be supplied by an Application
 * that uses the facility (other than as an argument passed when the
 * facility is invoked), then you may convey a copy of the modified
 * version:
 *
 *    a) under this License, provided that you make a good faith effort to
 *    ensure that, in the event an Application does not supply the
 *    function or data, the facility still operates, and performs
 *    whatever part of its purpose remains meaningful, or
 *
 *    b) under the GNU GPL, with none of the additional permissions of
 *    this License applicable to that copy.
 *
 *   3. Object Code Incorporating Material from Library Header Files.
 *
 *   The object code form of an Application may incorporate material from
 * a header file that is part of the Library.  You may convey such object
 * code under terms of your choice, provided that, if the incorporated
 * material is not limited to numerical parameters, data structure
 * layouts and accessors, or small macros, inline functions and templates
 * (ten or fewer lines in length), you do both of the following:
 *
 *    a) Give prominent notice with each copy of the object code that the
 *    Library is used in it and that the Library and its use are
 *    covered by this License.
 *
 *    b) Accompany the object code with a copy of the GNU GPL and this license
 *    document.
 *
 *   4. Combined Works.
 *
 *   You may convey a Combined Work under terms of your choice that,
 * taken together, effectively do not restrict modification of the
 * portions of the Library contained in the Combined Work and reverse
 * engineering for debugging such modifications, if you also do each of
 * the following:
 *
 *    a) Give prominent notice with each copy of the Combined Work that
 *    the Library is used in it and that the Library and its use are
 *    covered by this License.
 *
 *    b) Accompany the Combined Work with a copy of the GNU GPL and this license
 *    document.
 *
 *    c) For a Combined Work that displays copyright notices during
 *    execution, include the copyright notice for the Library among
 *    these notices, as well as a reference directing the user to the
 *    copies of the GNU GPL and this license document.
 *
 *    d) Do one of the following:
 *
 *        0) Convey the Minimal Corresponding Source under the terms of this
 *        License, and the Corresponding Application Code in a form
 *        suitable for, and under terms that permit, the user to
 *        recombine or relink the Application with a modified version of
 *        the Linked Version to produce a modified Combined Work, in the
 *        manner specified by section 6 of the GNU GPL for conveying
 *        Corresponding Source.
 *
 *        1) Use a suitable shared library mechanism for linking with the
 *        Library.  A suitable mechanism is one that (a) uses at run time
 *        a copy of the Library already present on the user's computer
 *        system, and (b) will operate properly with a modified version
 *        of the Library that is interface-compatible with the Linked
 *        Version.
 *
 *    e) Provide Installation Information, but only if you would otherwise
 *    be required to provide such information under section 6 of the
 *    GNU GPL, and only to the extent that such information is
 *    necessary to install and execute a modified version of the
 *    Combined Work produced by recombining or relinking the
 *    Application with a modified version of the Linked Version. (If
 *    you use option 4d0, the Installation Information must accompany
 *    the Minimal Corresponding Source and Corresponding Application
 *    Code. If you use option 4d1, you must provide the Installation
 *    Information in the manner specified by section 6 of the GNU GPL
 *    for conveying Corresponding Source.)
 *
 *   5. Combined Libraries.
 *
 *   You may place library facilities that are a work based on the
 * Library side by side in a single library together with other library
 * facilities that are not Applications and are not covered by this
 * License, and convey such a combined library under terms of your
 * choice, if you do both of the following:
 *
 *    a) Accompany the combined library with a copy of the same work based
 *    on the Library, uncombined with any other library facilities,
 *    conveyed under the terms of this License.
 *
 *    b) Give prominent notice with the combined library that part of it
 *    is a work based on the Library, and explaining where to find the
 *    accompanying uncombined form of the same work.
 *
 *   6. Revised Versions of the GNU Lesser General Public License.
 *
 *   The Free Software Foundation may publish revised and/or new versions
 * of the GNU Lesser General Public License from time to time. Such new
 * versions will be similar in spirit to the present version, but may
 * differ in detail to address new problems or concerns.
 *
 *   Each version is given a distinguishing version number. If the
 * Library as you received it specifies that a certain numbered version
 * of the GNU Lesser General Public License "or any later version"
 * applies to it, you have the option of following the terms and
 * conditions either of that published version or of any later version
 * published by the Free Software Foundation. If the Library as you
 * received it does not specify a version number of the GNU Lesser
 * General Public License, you may choose any version of the GNU Lesser
 * General Public License ever published by the Free Software Foundation.
 *
 *   If the Library as you received it specifies that a proxy can decide
 * whether future versions of the GNU Lesser General Public License shall
 * apply, that proxy's public statement of acceptance of any version is
 * permanent authorization for you to choose that version for the
 * Library.
 */
package com.github.szgabsz91.morpher.methods.tasr.impl.method;

import com.github.szgabsz91.morpher.core.io.Serializer;
import com.github.szgabsz91.morpher.core.model.AffixType;
import com.github.szgabsz91.morpher.core.model.FrequencyAwareWordPair;
import com.github.szgabsz91.morpher.core.model.Word;
import com.github.szgabsz91.morpher.core.model.WordPair;
import com.github.szgabsz91.morpher.methods.api.IMorpherMethod;
import com.github.szgabsz91.morpher.methods.api.model.MethodResponse;
import com.github.szgabsz91.morpher.methods.api.model.TrainingSet;
import com.github.szgabsz91.morpher.methods.tasr.converters.TASRMethodConverter;
import com.github.szgabsz91.morpher.methods.tasr.impl.tree.TASRTree;
import com.github.szgabsz91.morpher.methods.tasr.protocolbuffers.TASRMethodMessage;
import com.google.protobuf.Any;
import com.google.protobuf.InvalidProtocolBufferException;

import java.io.IOException;
import java.nio.file.Path;
import java.util.Optional;
import java.util.Set;

import static java.util.stream.Collectors.toSet;

/**
 * TASR based {@link IMorpherMethod} implementation.
 *
 * @author szgabsz91
 */
public class TASRMethod implements IMorpherMethod<TASRMethodMessage> {

    private boolean unidirectional;
    private AffixType affixType;
    private TASRTree inflectionTree;
    private TASRTree lemmatizationTree;

    /**
     * Constructor that sets the flag that indicates if the method is unidirectional or not
     * and its related {@link AffixType}.
     *
     * <p>If the method is unidirectional, it can only inflect words and not lemmatize.</p>
     *
     * @param affixType the {@link AffixType} that the method relates to
     * @param unidirectional the unidirectional flag
     */
    public TASRMethod(final boolean unidirectional, final AffixType affixType) {
        this.unidirectional = unidirectional;
        this.affixType = affixType;
        this.inflectionTree = new TASRTree();

        if (!unidirectional) {
            this.lemmatizationTree = new TASRTree();
        }
    }

    /**
     * Returns if the method is unidirectional, meaning that it can only inflect words and not lemmatize.
     * @return true if the method is unidirectional, false otherwise
     */
    public boolean isUnidirectional() {
        return unidirectional;
    }

    /**
     * Returns the {@link AffixType} that this method relates to.
     * @return the {@link AffixType} that this method relates to
     */
    @Override
    public AffixType getAffixType() {
        return affixType;
    }

    /**
     * Returns the {@link TASRTree} used for inflection.
     * @return the {@link TASRTree} used for inflection.
     */
    public TASRTree getInflectionTree() {
        return inflectionTree;
    }

    /**
     * Sets the {@link TASRTree} used for inflection.
     * @param inflectionTree the {@link TASRTree} used for inflection
     */
    public void setInflectionTree(final TASRTree inflectionTree) {
        this.inflectionTree = inflectionTree;
    }

    /**
     * Returns the {@link TASRTree} used for lemmatization.
     * @return the {@link TASRTree} used for lemmatization.
     */
    public TASRTree getLemmatizationTree() {
        return lemmatizationTree;
    }

    /**
     * Sets the {@link TASRTree} used for lemmatization.
     * @param lemmatizationTree the {@link TASRTree} used for lemmatization
     */
    public void setLemmatizationTree(final TASRTree lemmatizationTree) {
        this.lemmatizationTree = lemmatizationTree;
    }

    /**
     * Returns the number of nodes in the TASR tree.
     * @return the number of nodes in the TASR tree
     */
    @Override
    public int size() {
        if (this.unidirectional) {
            return this.inflectionTree.size();
        }

        return (this.inflectionTree.size() + this.lemmatizationTree.size()) / 2;
    }

    /**
     * Returns the optional inflection response containing the inflected forms of the given root form
     * and their probabilities.
     *
     * {@inheritDoc}
     */
    @Override
    public Optional<MethodResponse> inflect(final Word rootForm) {
        return this.inflectionTree.transform(rootForm);
    }

    /**
     * Returns the optional lemmatization response, containing the root forms of the given inflected form
     * and their probabilities.
     *
     * <p>If the method is unidirectional, {@link UnsupportedOperationException} is thrown.</p>
     *
     * {@inheritDoc}
     */
    @Override
    public Optional<MethodResponse> lemmatize(final Word inflectedForm) {
        if (unidirectional) {
            throw new UnsupportedOperationException("Unidirectional TASR method can only inflect but not lemmatize");
        }

        return this.lemmatizationTree.transform(inflectedForm);
    }

    /**
     * Incorporates the given training set.
     *
     * {@inheritDoc}
     */
    @Override
    public void learn(final TrainingSet trainingSet) {
        final Set<WordPair> wordPairs = trainingSet.getWordPairs()
                .stream()
                .map(FrequencyAwareWordPair::getWordPair)
                .collect(toSet());
        this.inflectionTree.learn(wordPairs);

        if (!this.unidirectional) {
            final Set<WordPair> inverseWordPairs = wordPairs
                    .stream()
                    .map(WordPair::inverse)
                    .collect(toSet());
            this.lemmatizationTree.learn(inverseWordPairs);
        }
    }

    /**
     * Converts the state to a message.
     * @return the message
     */
    @Override
    public TASRMethodMessage toMessage() {
        final TASRMethodConverter tasrMethodConverter = new TASRMethodConverter();
        return tasrMethodConverter.convert(this);
    }

    /**
     * Loads the state from the given message.
     * @param message the message
     */
    @Override
    public void fromMessage(final TASRMethodMessage message) {
        final TASRMethodConverter tasrMethodConverter = new TASRMethodConverter();
        final TASRMethod tasrMethod = tasrMethodConverter.convertBack(message);
        this.unidirectional = tasrMethod.isUnidirectional();
        this.affixType = tasrMethod.affixType;
        this.inflectionTree = tasrMethod.inflectionTree;
        this.lemmatizationTree = tasrMethod.lemmatizationTree;
    }

    /**
     * Loads the state from the given message.
     * @param message the message
     * @throws InvalidProtocolBufferException if the provided message is not an {@link TASRMethodMessage}
     */
    @Override
    public void fromMessage(final Any message) throws InvalidProtocolBufferException {
        if (!message.is(TASRMethodMessage.class)) {
            throw new InvalidProtocolBufferException("The provided message is not a TASRMethodMessage: " + message);
        }

        final TASRMethodMessage tasrMethodMessage = message.unpack(TASRMethodMessage.class);
        this.fromMessage(tasrMethodMessage);
    }

    /**
     * Saves the method state to the given file.
     *
     * {@inheritDoc}
     */
    @Override
    public void saveTo(final Path file) throws IOException {
        final TASRMethodConverter tasrMethodConverter = new TASRMethodConverter();
        final Serializer<TASRMethod, TASRMethodMessage> serializer = new Serializer<>(tasrMethodConverter, this);
        serializer.serialize(this, file);
    }

    /**
     * Loads the method state from the given file.
     *
     * {@inheritDoc}
     */
    @Override
    public void loadFrom(final Path file) throws IOException {
        final TASRMethodConverter tasrMethodConverter = new TASRMethodConverter();
        final Serializer<TASRMethod, TASRMethodMessage> serializer = new Serializer<>(tasrMethodConverter, this);
        final TASRMethod tasrMethod = serializer.deserialize(file);
        this.unidirectional = tasrMethod.isUnidirectional();
        this.affixType = tasrMethod.affixType;
        this.inflectionTree = tasrMethod.inflectionTree;
        this.lemmatizationTree = tasrMethod.lemmatizationTree;
    }

}
